--- a/css/sub_1.css
+++ b/css/sub_1.css
@@ -102,7 +102,7 @@ footer::after {
 .overview {
     background-color: #EBF0FA;
     text-align: center;
-    padding: 147px 0 131px 0;
+    padding: 147px 0 191px 0;
     margin: 157px 0 0 0;
 }
 .overview .tit {
@@ -128,4 +128,63 @@ footer::after {
 }
 .overview .photo {
     margin: 108px;
+}
+
+.guide {
+    margin: 0 0 0 0;
+    padding-bottom: 173px;
+    background-color: #EBF0FA;
+    background-position: left top;
+    background-repeat: no-repeat;
+    background-image: url(../images/content/guide_bg.png) ;
+    padding: 150px 0 100px 0;
+}
+
+.guide .tit h2 {
+    font-size: 31px;
+    margin-bottom: 34px;
+    font-weight: 700;
+    position: relative;
+    z-index: 3;
+}
+.guide .tit h2::before {
+    position: absolute;
+    left: -5%;
+    top: 0;
+    content: "";
+    background-position: center center;
+    background-repeat: no-repeat;
+    width: 149.94px;
+    height: 179.41px;
+    background-size: contain;
+    background-image: url("data:image/svg+xml,%3Csvg width='150' height='180' viewBox='0 0 150 180' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M120.247 24.3703C64.2474 -31.6297 19.2474 21.8477 3.74743 55.5864C-3.91924 78.5864 -4.95257 133.586 52.2474 169.586C123.747 214.586 190.247 94.3703 120.247 24.3703Z' fill='%23EBF0FA'/%3E%3C/svg%3E%0A");
+    z-index: -2;
+}
+.guide .tit p {
+    width: 50%;
+    position: relative;
+    z-index: 3;
+}
+.guide .ctn {
+    display: flex;
+    justify-content: space-between;
+    
+}
+.guide .ctn h3 {
+    margin: 80px 0 40px 0;
+    font-size: 21px;
+    font-weight: 700;
+}
+.guide .ctn .logo_wrap {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 80px 0;
+    padding-left: 50px;
+}
+.guide .ctn .right h3{
+    margin-bottom: 32px;
+    font-size: 21px;
+    font-weight: 700;
 }
