--- a/css/sub_2.css
+++ b/css/sub_2.css
@@ -2,22 +2,25 @@
 
 :root {
 
-    --back-c: #fff;
-    --point : #396ACC;
+    --back-c: #181D31;
+    --point : #3875F1;
+    
 }
 
-html {
+html , body{
     background-color: var(--back-c);
+    color: #fff;
 }   
 header {
     font-size: 20px;
     z-index: 100;
     mix-blend-mode: normal;
-    color: #111;
     background-color: var(--back-c);
-    border-bottom: 1px solid #EDEDED;
+    border-bottom: 1px solid rgba(237, 237, 237, 0.14);
 }
-header .home ,
+header .home {
+    color: #fff;
+}
 .gnb ul li a.curr{
     color: var(--point) ;
 }
@@ -37,16 +40,12 @@ header .home a span::before {
     content: "";
     width: 14px;
     height: 16px;   
-    background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 14 16' fill='%23396ACC' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M1 14.9866H4.69225V9.02328H9.30775V14.9866H13V5.86604L7 1.26674L1 5.86604V14.9866ZM0 16V5.35934L7 0L14 5.35934V16H8.30775V10.0367H5.69225V16H0Z' /%3E%3C/svg%3E%0A");
+    background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 14 16' fill='%23ffffff' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M1 14.9866H4.69225V9.02328H9.30775V14.9866H13V5.86604L7 1.26674L1 5.86604V14.9866ZM0 16V5.35934L7 0L14 5.35934V16H8.30775V10.0367H5.69225V16H0Z' /%3E%3C/svg%3E%0A");
 }
 
  
 .gnb ul li a.curr {
     font-weight: 400;
-}
-
-footer::after {
-    background-color: var(--back-c);
 }
 
 
@@ -63,7 +62,7 @@ footer::after {
 }
 
 .intro .txt strong {
-    color: var(--point);
+    color: var(--white);
     font-weight: 600;
     font-size: 21px;
 }
@@ -72,6 +71,7 @@ footer::after {
     font-size: 40px;
     font-weight: 600;
     margin: 15px 0 44px 0;
+    line-height: 1.3;
 }
 .intro .txt p {
     width: 90%;
@@ -79,7 +79,7 @@ footer::after {
 .intro .txt .more a {
     display: inline-block;
     color: var(--back-c);
-    background-color: var(--point);
+    background-color: var(--white);
     padding: 4px 28px ;
     border-radius: 30px;
     margin-top: 56px;
@@ -99,11 +99,13 @@ footer::after {
     font-weight: 700;
     margin-bottom: 6px;
 }
+.intro .photo {
+    margin-top: 20px;
+} 
 
 .overview {
-    background-color: #EBF0FA;
     text-align: center;
-    padding: 147px 0 191px 0;
+    padding: 147px 0 80px 0;
     margin: 157px 0 0 0;
 }
 .overview .tit {
@@ -117,28 +119,14 @@ footer::after {
     position: relative;
     z-index: 2;
 }
-.overview .tit  .deco {
-    position: absolute;
-    left: 50%;
-    transform: translateX(-50%);
-    top: 0;
-    background: url(../images/content/prj_01_overview.png) no-repeat center left / contain;
-    width: 135px;
-    height: 46px;
-    z-index: 1;
-}
+
 .overview .photo {
     margin: 108px;
 }
 
 .guide {
-    margin: 0 0 0 0;
-    padding-bottom: 173px;
-    background-color: #EBF0FA;
-    background-position: left top;
-    background-repeat: no-repeat;
-    background-image: url(../images/content/guide_bg.png) ;
-    padding: 150px 0 100px 0;
+    margin: 100px 0 0 0;
+    padding-bottom: 200px;
 }
 
 .guide .tit h2 {
@@ -148,19 +136,7 @@ footer::after {
     position: relative;
     z-index: 3;
 }
-.guide .tit h2::before {
-    position: absolute;
-    left: -5%;
-    top: 0;
-    content: "";
-    background-position: center center;
-    background-repeat: no-repeat;
-    width: 149.94px;
-    height: 179.41px;
-    background-size: contain;
-    background-image: url("data:image/svg+xml,%3Csvg width='150' height='180' viewBox='0 0 150 180' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M120.247 24.3703C64.2474 -31.6297 19.2474 21.8477 3.74743 55.5864C-3.91924 78.5864 -4.95257 133.586 52.2474 169.586C123.747 214.586 190.247 94.3703 120.247 24.3703Z' fill='%23EBF0FA'/%3E%3C/svg%3E%0A");
-    z-index: -2;
-}
+
 .guide .tit p {
     width: 50%;
     position: relative;
@@ -169,23 +145,12 @@ footer::after {
 .guide .ctn {
     display: flex;
     justify-content: space-between;
+    margin-top: 50px;
     
 }
 .guide .ctn h3 {
     margin: 80px 0 40px 0;
     font-size: 21px;
     font-weight: 700;
-}
-.guide .ctn .logo_wrap {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 80px 0;
-    padding-left: 50px;
-}
-.guide .ctn .right h3{
-    margin-bottom: 32px;
-    font-size: 21px;
-    font-weight: 700;
+    margin-bottom: 40px;
 }
