--- a/css/sub_5.css
+++ b/css/sub_5.css
@@ -3,7 +3,7 @@
 :root {
 
     --back-c: #1c1c1c;
-    --point : #6a6a6a;
+    --point : #DF87A3;
     --dark : #1c1c1c;
     
 }
@@ -54,8 +54,81 @@ header .home a span::before {
 
 
 
-.container img {
+
+
+.intro  {
+    background: url(../images/content/sts_bg.jpg) no-repeat center center / cover;
     width: 100%;
-    height: auto;
-    padding: 0 0 150px 0;
+    height: 100dvh;
+    padding: 180px 0 0 0;
+}
+
+.intro .txt strong {
+    display: block;
+    width: 708.48px;
+    height: 133.04px;
+    background: url(../images/content/sts_intrologo.png) no-repeat center center / contain;
+}
+.intro .txt h2 {
+    font-size: 40px;
+    font-weight: 700;
+    line-height: 1.3;
+    margin: 70px 0 24px 0;
+}
+.intro .txt p {
+    width: 50%;
+}
+.intro .project .list ul li h3{
+    
+    font-weight: 500;
+    margin: 33px 0 5px 0 ;
+    font-size: 15px;
+}
+.intro .project .list ul li p {
+    margin: 0 0 15px 0;
+    font-size: 15px;
+}
+
+.overview {
+    padding: 118px 0 130px 0;
+}
+.overview .tit h2{
+    font-size: 21px;
+    font-weight: 600;
+    line-height: 1.3;
+    margin-bottom: 41px;
+}
+.overview .tit p {
+    width: 68%;
+}
+
+.overview .over_wrap {
+    margin-top: 93px;
+    display: flex;
+    gap: 0 200px;
+    justify-content: center;
+    align-items: center;
+}
+.overview .over_wrap .typo h3 {
+    margin-bottom: 134px;
+}
+.overview .over_wrap .symbol {
+    margin-top: 30px;
+} 
+.detail {
+    text-align: center;
+    padding: 200px 0 200px 0;
+}
+.detail .exh_wrap {
+    display: flex;
+    justify-content: center;
+    gap: 0 24px;
+    margin: 230px 0 0 0;
+}
+.detail {
+    text-align: center;
+    background: url(../images/content/sts_detailbg.jpg) no-repeat center center / cover;
+}
+.detail img {
+    transform: scale(0.8);
 }
