--- a/css/common.css
+++ b/css/common.css
@@ -93,7 +93,7 @@ body {
 
 #wrap {
     position: relative;
-    /* overflow: hidden ; */
+    overflow: hidden ;
 }
 .blind {
     position: absolute;
