--- a/css/main.css
+++ b/css/main.css
@@ -18,7 +18,8 @@ body{
     padding: 180px 0 0 0;
 }
 .main .slogan h2 {
-    font-size: clamp(60%, 6vw, 12rem);
+    font-size: clamp(100px, 6vw, 12rem);
+
     line-height: 1.3;
     font-weight: 400;
     position: relative;
