--- a/gunsan/css/layout.css
+++ b/gunsan/css/layout.css
@@ -118,7 +118,6 @@ header .header_main .gnb_wrap ul.depth1 > li > .depth2_wrap {
     width: 100%;
     background-color: var(--white);
     overflow: hidden;
-    height: 0px;
     display: flex;
     transition: height 0.5s;
 }
@@ -154,54 +153,56 @@ header .header_main .gnb_wrap ul.depth1 > li > .depth2_wrap > .slogan h2 {
     font-weight: 600;
     margin: 5px 0 0 0;
 }
-
-header .header_main .gnb_wrap ul.depth1 > li > .depth2_wrap > ul.depth2 {
-    padding: 36px 0 0 42px;
-    display: flex;
-    flex-wrap: wrap;
-    gap: 30px 49px;
+header .header_main .gnb_wrap ul.depth1 > li > .depth2_wrap > ul.depth2 > li{
+    background-color: var(--main2-c);
+    color: var(--white);
+    position: relative;
+    text-align: center;
+    border-bottom: 1px solid rgba(255, 255, 255, .05);
+}   
+header .header_main .gnb_wrap ul.depth1 > li > .depth2_wrap > ul.depth2 > li:last-child {
+    border-bottom: none;
 }
-
-header .header_main .gnb_wrap ul.depth1 > li > .depth2_wrap > ul.depth2  > li {
-    width: calc(25% - 79px);
-    white-space: nowrap;
+header .header_main .gnb_wrap ul.depth1 > li > .depth2_wrap > ul.depth2 > li::after {
+    position: absolute;
+    left: 100%;
+    bottom: 0;
+    width: 64vw;
+    height: 1px;
+    background-color: #ededed;
+    content: "";
+}
+header .header_main .gnb_wrap ul.depth1 > li > .depth2_wrap > ul.depth2 > li:last-child::after {
+    display: none;
 }
 header .header_main .gnb_wrap ul.depth1 > li > .depth2_wrap > ul.depth2  > li > a {
     display: inline-block;
-    padding: 10px 67px 10px 23px;
-    border: 1px solid #ededed;
-    border-radius: 10px;
-    font-size: 20px;
-}
-header .header_main .gnb_wrap ul.depth1 > li > .depth2_wrap > ul.depth2  > li > a span {
-    position: relative;
-}
-header .header_main .gnb_wrap ul.depth1 > li > .depth2_wrap > ul.depth2  > li > a span::after {
-    position: absolute;
-    content: "";
-    width: 13px;
-    height: 7px;
-    right: -52px;
-    top: 50%;
-    transform: translateY(-50%);
-    background-position: center center;
-    background-repeat: no-repeat;
-    background-size: contain;
-    background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 14 8' fill='%23555555' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M13.0696 0.960782L6.53482 7.49561L0 0.960783L0.96072 6.29005e-05L6.53482 5.57434L12.1089 6.24132e-05L13.0696 0.960782Z' /%3E%3C/svg%3E%0A");
-}
-header .header_main .gnb_wrap ul.depth1 > li > .depth2_wrap > ul.depth2  > li:not(:has(ul.depth3)) > a span::after { 
-    display: none;
+    padding: 28px 60px;
 }
 
+
 header .header_main .gnb_wrap ul.depth1 > li > .depth2_wrap > ul.depth2  > li > ul.depth3{
-    margin: 10px 0 0 20px;
-    
+    position: absolute;
+    display: flex;
+    align-items: center;
+    color: var(--txt-c);
+    gap: 0px 64px;
+    left: 100%;
+    top: 50%;
+    transform: translateY(-50%);
+    white-space: nowrap;
+    flex-wrap: wrap;
+    width: 55vw;
+    height: 100%;
+    padding: 10px 40px;
+    font-size: 15px;
 }
-header .header_main .gnb_wrap ul.depth1 > li > .depth2_wrap > ul.depth2  > li > ul.depth3 > li > a {
-    display: block;
-    padding: 5px 0;
-    white-space: wrap;
-} 
+header .header_main .gnb_wrap ul.depth1 > li > .depth2_wrap > ul.depth2  > li > ul.depth3:not(:has(li)) {
+    background-color: var(--main1-cw);
+}
+header .header_main .gnb_wrap ul.depth1 > li > .depth2_wrap > ul.depth2  > li > ul.depth3 > li > a:hover {
+    font-weight: 600;
+}
 header .header_main .gnb_wrap ul.depth1 > li > .depth2_wrap > ul.depth2  > li > ul.depth3 > li > a span{
     position: relative;
 }
@@ -243,7 +244,7 @@ header.open_pc .header_main .gnb_wrap ul.depth1 > li.over > a::after {
 
 }
 header .header_main .gnb_wrap ul.depth1 > li.over > .depth2_wrap {
-    height: 800px;
+    height: auto;
 }
 }
 
