--- a/gunsan/css/common.css
+++ b/gunsan/css/common.css
@@ -34,6 +34,7 @@
     --regular: 400;
     --light-w: 300;
     --titline: 1.3;
+    --nuli : 'Elice DX Neolli';
 
     /*display*/
     --header-h: 90px;
