--- a/gunsan/css/layout.css
+++ b/gunsan/css/layout.css
@@ -4,11 +4,12 @@
 
 
 header {
-    position: fixed;
+    position: relative;
     top: 0;
     left: 0;
     width: 100%;
     background-color: var(--white);
+    z-index: 999;
 }
 header::after {
     position: absolute;
@@ -18,6 +19,8 @@ header::after {
     height: 1px;
     content: "";
     background-color: #ededed;
+    pointer-events: none;
+    display: none;
 }
 header .header_top{
     height: 50px;
@@ -29,6 +32,11 @@ header .header_top{
     padding-right: var(--ctn-mar);
     overflow-x: auto;
     overflow-y: hidden;
+    scrollbar-width: 0;
+    
+}
+header .header_top::-webkit-scrollbar {
+    display: none;
 }
 
 header .header_top ul {
@@ -54,7 +62,7 @@ header .header_top ul li a.curr::after {
 }
 header .header_main {
     height: var(--header-var);
-    padding: 0 var(--ctn-mar);
+    padding: 0 var(--ctn-mar) 0 3%;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -106,7 +114,7 @@ header .header_main .gnb_wrap ul.depth1 > li > a {
     display: block;
     padding: 0 27px;
     font-size: 22px;
-    font-family: 'Elice DX Neolli';
+    font-family: var(--nuli);
     color: var(--tit-c);
     font-weight: 500;
     line-height: var(--header-var);
@@ -122,8 +130,6 @@ header .header_main .gnb_wrap ul.depth1 > li > .depth2_wrap {
     transition: opacity 0.3s;
     height: 0;
     opacity: 0;
-    
-    
 }
 
 header .header_main .gnb_wrap ul.depth1 > li > .depth2_wrap > .slogan {
@@ -251,9 +257,73 @@ header.open_pc .header_main .gnb_wrap ul.depth1 > li.over > a::after {
 header.open_pc .header_main .gnb_wrap ul.depth1 > li.over > .depth2_wrap {
     height: auto;
     opacity: 1;
+    border-bottom: 1px solid #ededed;
 }
 }
-
+@media screen and (max-width:1024px){
+    header .header_main {
+        padding-right: 0;
+    }
+    header .header_top .lang {
+        display: none;
+    }
+    header .header_main .gnb_open {
+        width: var(--header-var);
+        height: var(--header-var);
+        background-position: center center;
+        background-repeat: no-repeat;
+        background-size: 18px;
+        background-image: url("data:image/svg+xml,%3Csvg width='18' height='14' viewBox='0 0 18 14' fill='%230074D8' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M0 1.88536V0H18V1.88536H0ZM0 13.1975V11.3121H18V13.1975H0ZM0 7.54143V5.65607H18V7.54143H0Z' /%3E%3C/svg%3E%0A");
+    }
+    header .header_main .gnb_wrap{
+        position: absolute;
+        right: -100%;
+        top: -50px;
+        width: 80vw;
+        height: 100dvh;
+        background-color: var(--white);
+    
+    }
+    header.open_mo .header_main .gnb_wrap {
+        right: 0;
+    }
+    header .header_main::before {
+        position: absolute;
+        content: "";
+        left: 0;
+        top: -50px;
+        width: 100%;
+        height: 100dvh;
+        background-color: var(--black50);
+        opacity: 0;
+        transition: 0.3s;
+    }
+    header.open_mo .header_main::before {
+        opacity: 1;
+    }
+    header .header_main .gnb_wrap .gnb_lang {
+        border-bottom: 1px solid #ededed;
+    }
+    header .header_main .gnb_wrap .gnb_lang button{
+        display: block;
+        padding:17px 20px 15px var(--ctn-mar);
+        color: var(--main1-c);
+        position: relative;
+    }
+    header .header_main .gnb_wrap .gnb_lang button::after{
+        position: absolute;
+        right: 0;
+        top: 50%;
+        transform: translateY(-50%);
+        content: "";
+        width: 14px;
+        height: 14px;
+        background-position: center center;
+        background-repeat: no-repeat;
+        background-size: contain;
+        background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 15 15' fill='%230074D8' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M7.10418 14.209C6.13016 14.209 5.21098 14.0222 4.34663 13.6488C3.48229 13.2754 2.7285 12.767 2.08526 12.1236C1.4419 11.4803 0.933514 10.7265 0.560108 9.86213C0.186703 8.99776 0 8.07854 0 7.10448C0 6.12269 0.186703 5.20154 0.560108 4.34102C0.933514 3.48051 1.4419 2.72862 2.08526 2.08535C2.7285 1.44196 3.48229 0.933553 4.34663 0.560132C5.21098 0.186711 6.13016 0 7.10418 0C8.08592 0 9.00704 0.186711 9.86751 0.560132C10.728 0.933553 11.4799 1.44196 12.1231 2.08535C12.7665 2.72862 13.2748 3.48051 13.6482 4.34102C14.0217 5.20154 14.2084 6.12269 14.2084 7.10448C14.2084 8.07854 14.0217 8.99776 13.6482 9.86213C13.2748 10.7265 12.7665 11.4803 12.1231 12.1236C11.4799 12.767 10.728 13.2754 9.86751 13.6488C9.00704 14.0222 8.08592 14.209 7.10418 14.209ZM7.10418 13.0713C7.48581 12.5651 7.80699 12.0546 8.06773 11.5397C8.32846 11.0248 8.54084 10.462 8.70486 9.85129H5.50349C5.67711 10.4812 5.89192 11.0536 6.14792 11.5685C6.40379 12.0834 6.72255 12.5843 7.10418 13.0713ZM5.65605 12.8656C5.36939 12.4543 5.11195 11.9867 4.88375 11.4629C4.65554 10.9389 4.47819 10.4017 4.35168 9.85129H1.81493C2.2099 10.6279 2.73959 11.2804 3.40402 11.8088C4.06845 12.337 4.81912 12.6893 5.65605 12.8656ZM8.55231 12.8656C9.38923 12.6893 10.1399 12.337 10.8043 11.8088C11.4688 11.2804 11.9985 10.6279 12.3934 9.85129H9.85667C9.70611 10.4064 9.51673 10.946 9.28852 11.47C9.06044 11.994 8.81504 12.4592 8.55231 12.8656ZM1.34456 8.72953H4.12454C4.07755 8.45158 4.04346 8.17906 4.02227 7.91195C4.00121 7.64498 3.99068 7.37582 3.99068 7.10448C3.99068 6.83313 4.00121 6.56397 4.02227 6.297C4.04346 6.02989 4.07755 5.75737 4.12454 5.47942H1.34456C1.27264 5.73344 1.21756 5.99755 1.17929 6.27176C1.14091 6.54596 1.12171 6.82354 1.12171 7.10448C1.12171 7.38541 1.14091 7.66299 1.17929 7.93719C1.21756 8.2114 1.27264 8.47551 1.34456 8.72953ZM5.24606 8.72953H8.96229C9.00916 8.45158 9.04318 8.18149 9.06437 7.91925C9.08543 7.657 9.09596 7.38541 9.09596 7.10448C9.09596 6.82354 9.08543 6.55195 9.06437 6.2897C9.04318 6.02746 9.00916 5.75737 8.96229 5.47942H5.24606C5.1992 5.75737 5.16517 6.02746 5.14398 6.2897C5.12292 6.55195 5.11239 6.82354 5.11239 7.10448C5.11239 7.38541 5.12292 7.657 5.14398 7.91925C5.16517 8.18149 5.1992 8.45158 5.24606 8.72953ZM10.0838 8.72953H12.8638C12.9357 8.47551 12.9908 8.2114 13.0291 7.93719C13.0674 7.66299 13.0866 7.38541 13.0866 7.10448C13.0866 6.82354 13.0674 6.54596 13.0291 6.27176C12.9908 5.99755 12.9357 5.73344 12.8638 5.47942H10.0838C10.1308 5.75737 10.1649 6.02989 10.1861 6.297C10.2071 6.56397 10.2177 6.83313 10.2177 7.10448C10.2177 7.37582 10.2071 7.64498 10.1861 7.91195C10.1649 8.17906 10.1308 8.45158 10.0838 8.72953ZM9.85667 4.35766H12.3934C11.9937 3.57143 11.4676 2.91894 10.8152 2.40019C10.1627 1.88156 9.40842 1.52684 8.55231 1.33602C8.83897 1.77126 9.09397 2.24732 9.31732 2.7642C9.54078 3.28096 9.72057 3.81211 9.85667 4.35766ZM5.50349 4.35766H8.70486C8.53124 3.73247 8.31288 3.15644 8.04978 2.62959C7.78655 2.10274 7.47135 1.60542 7.10418 1.13765C6.737 1.60542 6.4218 2.10274 6.15857 2.62959C5.89547 3.15644 5.67711 3.73247 5.50349 4.35766ZM1.81493 4.35766H4.35168C4.48778 3.81211 4.66757 3.28096 4.89104 2.7642C5.11438 2.24732 5.36939 1.77126 5.65605 1.33602C4.79507 1.52684 4.0396 1.88281 3.38963 2.40393C2.73953 2.92493 2.21463 3.57617 1.81493 4.35766Z' /%3E%3C/svg%3E%0A");
+    }
+}
 
 
 footer {
