--- a/gunsan/css/layout.css
+++ b/gunsan/css/layout.css
@@ -25,7 +25,6 @@ header::after {
 header .header_top{
     height: 50px;
     font-size: 15px;
-    border-bottom: 1px solid #ededed;
     display: flex;
     justify-content: space-between;
     line-height: 50px;
@@ -33,10 +32,20 @@ header .header_top{
     overflow-x: auto;
     overflow-y: hidden;
     scrollbar-width: 0;
+    position: relative;
     
 }
 header .header_top::-webkit-scrollbar {
     display: none;
+}
+header .header_top::before {
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 1px;
+    content: "";
+    background-color: #ededed;
 }
 
 header .header_top ul {
@@ -59,6 +68,7 @@ header .header_top ul li a.curr::after {
     width: 100%;
     height: 3px;
     background-color: var(--white);
+    z-index: 10;
 }
 header .header_main {
     height: var(--header-var);
@@ -71,8 +81,8 @@ header .header_main {
 
 
 header .header_main .logo {
-    width: clamp(64px, 16vw ,101px);
-    height: clamp(23px, 8vw ,37px);
+    width: clamp(64px, 12vw ,101px);
+    height: clamp(23px, 4vw ,37px);
     background: url(../images/common/logo.svg) no-repeat center center / contain;
 }
 
@@ -262,7 +272,9 @@ header.open_pc .header_main .gnb_wrap ul.depth1 > li.over > .depth2_wrap {
 }
 @media screen and (max-width:1024px){
     header .header_main {
-        padding-right: 0;
+        padding: 15px 0 13px var(--ctn-mar);
+        border-bottom: 1px solid #ededed;
+        
     }
     header .header_top .lang {
         display: none;
