--- a/gunsan/css/layout.css
+++ b/gunsan/css/layout.css
@@ -122,7 +122,7 @@ header .header_main .gnb_wrap ul.depth1 {
 }
 header .header_main .gnb_wrap ul.depth1 > li > a {
     display: block;
-    padding: 0 27px;
+    padding: 0 clamp(17px, 1.8vw ,27px);
     font-size: clamp(19px, 1.2vw ,22px);
     font-family: var(--nuli);
     color: var(--tit-c);
