--- a/gunsan/css/layout.css
+++ b/gunsan/css/layout.css
@@ -68,7 +68,7 @@ header .header_top ul li a.curr::after {
     width: 100%;
     height: 3px;
     background-color: var(--white);
-    z-index: 10;
+    z-index: 3;
 }
 header .header_main {
     height: var(--header-var);
@@ -271,6 +271,9 @@ header.open_pc .header_main .gnb_wrap ul.depth1 > li.over > .depth2_wrap {
 }
 }
 @media screen and (max-width:1024px){
+    header {
+        position: fixed;
+    }
     header .header_main {
         padding: 15px 0 13px var(--ctn-mar);
         border-bottom: 1px solid #ededed;
@@ -295,6 +298,7 @@ header.open_pc .header_main .gnb_wrap ul.depth1 > li.over > .depth2_wrap {
         height: 100dvh;
         background-color: var(--white);
         transition: 0.3s;
+        z-index: 50;
     
     }
     header.open_mo .header_main .gnb_wrap {
@@ -314,6 +318,7 @@ header.open_pc .header_main .gnb_wrap ul.depth1 > li.over > .depth2_wrap {
     header.open_mo .header_main::before {
         opacity: 1;
         left: 0;
+        z-index: 3;
     }
     
     header .header_main .gnb_wrap .gnb_lang {
