--- a/gunsan/css/main.css
+++ b/gunsan/css/main.css
@@ -119,27 +119,46 @@
 }
 .main_content {
     margin: 53px 0 0 0;
+    
+}
+.main_content .wrapper {
+    display: flex;
+    justify-content: space-between;
+    gap: 0 24px;
+    height: 53.98%;
+}
+.main_content .wrapper .ctn_wrap {
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: flex-end;
+    width: 57.77%;
+    gap: 0 24px;
 }
 .main_content .popup{
-    width: 32.22%;
-    height: 538px;
+    width: 55.76%;
+    height: 100%;
     border-radius: 20px 20px  20px 80px;
     overflow: hidden;
     position: relative;
 }
+.main_content .popup .swiper {
+    height: 100%;
+}
 .main_content .popup .swiper .swiper-slide a {
     display: block;
+    width: 100%;
+    height: 100%;
 }
 .main_content .popup .swiper .swiper-slide a .photo {
-    width: 464px;
-    height: 538px;
+    width: 100%;
+    height: 100%;
 }
 .main_content .popup .swiper .swiper-slide a .photo img {
     width: 100%;
     height: 100%;
     object-fit: cover;
     vertical-align: top;
-    /* display: none; */
+    
 }
 .main_content .popup .swiper .ctrl_btn {
     width: 177px;
@@ -213,4 +232,323 @@
 .main_content .popup .swiper .ctrl_btn .swiper-pagination-current {
     color: var(--main1-c);
     font-weight: 700;
+}
+.main_content .sug {
+    width: 41.10%;
+}
+
+.main_content .sug .tit h2 {
+    font-family: var(--nuli);
+    font-size: 28px;
+    margin: 0 0 7px 0;
+    color: var(--tit-c);
+    font-weight: 500;
+
+}
+.main_content .sug .sug_list {
+    margin: 21px 0 0 0;
+}
+
+.main_content .sug .sug_list ul li a {
+    display: block;
+    padding: 12px 0;
+    border-bottom: 1px solid #ededed;
+}
+
+.main_content .sug .sug_list ul li a h3 {
+    font-size: 19px;
+    font-weight: 600;
+    color: var(--tit-c);
+    margin-bottom: 12px;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
+}
+.main_content .sug .sug_list ul li a:hover h3 {
+    text-decoration: underline;
+    text-underline-offset: 3px;
+}
+.main_content .sug .sug_list ul li a span {
+    font-size: 15px;
+}
+.main_content .sug .sug_list ul li.first a {
+    display: block;
+    padding: 29px 22px;
+    border-radius: 10px;
+    background-color: var(--main1-c);
+    color: var(--white);
+    margin-bottom: 16px;
+}
+.main_content .sug .sug_list ul li.first a h3 {
+    color: var(--white);
+    white-space: wrap;
+    text-overflow: unset;
+    font-size: 20px;
+    font-weight: 600;
+}
+.main_content .sug .sug_list ul li.first a p {
+    margin: 17px 0 25px 0;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 3;
+    text-overflow: ellipsis;
+    height: 4.5em;
+    overflow: hidden;
+    word-break: normal;
+    font-size: 15px;
+}
+
+.main_content .mayor {
+    position: relative;
+    width: 40.625%;
+    padding: 133px 0 0 5%;    
+}
+.main_content .mayor::after {
+    position: absolute;
+    left: 0;
+    top: 0;
+    background-image: linear-gradient(var(--main1-c), var(--white));
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    opacity: .12;
+    content: "";
+    width: calc(100% + var(--wrapper-mar) + 30px);
+    height: 100%;
+    border-radius: 230px 0 0 0;
+    z-index: -10;
+}
+.main_content .mayor .tit {
+    position: relative;
+}
+.main_content .mayor .tit::after {
+    position: absolute;
+    left: 0;
+    top: -40px;
+    content: "";
+    width: 90%;
+    height: 100%;
+    background: url(../images/main/mayor02.png) no-repeat center center / contain;
+    z-index: -2;
+}
+.main_content .mayor .tit strong {
+    margin: 0 0 15px 0;
+    display: inline-block;
+}
+.main_content .mayor .tit h2 {
+    font-size: 22px;
+    color: var(--tit-c);
+    font-weight: 600;
+}
+.main_content .mayor .tit h2 span.name {
+    font-size: 59px;
+    color: var(--main1-c);
+    padding: 0 0 0 24px;
+}
+.main_content .mayor .more a {
+    display: inline-block;
+    padding: 5px 25px;
+    border: 1px solid var(--main1-c);
+    color: var(--main1-c);
+    border-radius: 40px;
+    margin: 20px 0 0 0;
+    transition: .3s;
+}
+.main_content .mayor .more a:hover {
+    background-color: var(--main1-c);
+    color: var(--white);
+}
+.main_content .mayor .photo {
+    position: absolute;
+    right: -10%;
+    top: 30px;
+    z-index: -1;
+}
+.main_content .mayor .ico_list {
+    margin: 130px 0 0 0;
+}
+.main_content .mayor .ico_list ul {
+    display: flex;
+    gap: 0 1.4118em;
+}
+.main_content .mayor .ico_list ul li a{
+    width: 98px;
+    height: 98px;
+    border-radius: 10px;
+    border: 1px solid var(--main1-cw);
+    background-color: var(--white);
+    font-size: 15px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 3px 4px 8.9px rgba(0, 0, 0, 0.06);
+    transition: .4s;
+}
+    
+.main_content .mayor .ico_list ul li a:hover {
+    transform: translateY(-10px);
+}
+.main_content .mayor .ico_list ul li a .ico {
+     display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.main_content .mayor .ico_list ul li a:hover span {
+    font-weight: 500;
+}
+
+@media screen and (max-width:1440px){
+    .main_content .wrapper {
+    display: flex;
+    flex-direction: column;
+    gap: 0 24px;
+}
+.main_content .wrapper .ctn_wrap {
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: flex-end;
+    width: 100%;
+    gap: 0 24px;
+}
+.main_content .popup {
+    aspect-ratio: 464 / 583;
+}
+.main_content .sug {
+    width: 40%;
+}
+.main_content .mayor {
+    margin: 40px 0 0 0;
+    width: 100%;
+    padding-left: 11%;
+    padding-top: 7%;
+}
+.main_content .mayor .tit,
+.main_content .mayor .more {
+    padding: 0 0 0 11%;
+}
+.main_content .mayor .photo {
+    right: 10%;
+}
+.main_content .mayor .ico_list  { 
+    margin-top: 50px;
+}
+}
+@media screen and (max-width:1024px){
+    .container {
+        margin: 150px 0 0 0;
+    }
+}
+
+@media screen and (max-width:768px){
+    .main_content .wrapper .ctn_wrap {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    width: 100%;
+    gap: 0 24px;
+}
+.main_content .popup {
+    width: 100%;
+    aspect-ratio: 464 / 583;
+}
+.main_content .sug {
+    width: 100%;
+    margin-top: 36px;
+}
+.main_content .sug .sug_list ul li.first a p{
+    -webkit-line-clamp: 2;
+    height: 3em;
+    overflow: hidden;
+}
+.main_content .mayor {
+    padding-top: 100px;
+    padding-left: 3%;
+    height: 361px;
+}
+.main_content .mayor::after {
+    border-radius: 150px 0 0 0;
+} 
+.main_content .mayor .tit strong {
+    font-size: 13px;
+    margin-bottom: 10px;
+}
+.main_content .mayor .tit h2 {
+    font-size: 18px;
+}
+.main_content .mayor .tit h2 span {
+    font-size: 32px;
+}
+.main_content .mayor .more {
+    font-size: 13px;
+}
+.main_content .mayor .ico_list ul {
+    justify-content: center;
+}
+.main_content .mayor .photo {
+    right: 0;
+    width: 65%;
+    height: 100%;
+}
+.main_content .mayor .photo img {
+    object-fit: contain;
+    width: 100%;
+    height: 100%;
+}
+}
+
+@media screen and (max-width:550px){
+    .main_content .mayor {
+        padding-top: 100px;
+        padding-left: 0;
+        height: 361px;
+    }
+    .main_content .mayor::after {
+        border-radius: 90px 0 0 0;
+    }
+    .main_content .mayor .tit::after {
+        left: 40px;
+    }
+    .main_content .mayor .photo {
+        right: -7%;
+    }
+    .main_content .mayor .ico_list ul {
+        gap: 0 4%;
+    }
+    .main_content .mayor .ico_list ul li a {
+        width: clamp(74px, 19vw ,90px);
+        height: clamp(74px, 19vw ,90px);
+        font-size: 12px;
+    }
+    .main_content .mayor .ico_list ul li a .ico {
+        width: 35px;
+        height: 35px;
+    }
+    .main_content .mayor .ico_list ul li a .ico img {
+        height: 100%;
+        width: 100%;
+        object-fit: contain;
+    }
+}
+
+@media screen and (max-width:450px){
+    .main_content .mayor {
+        padding-top: 50px;
+    }
+    .main_content .mayor .photo {
+        right: -11%;
+    }
+    .main_content .mayor .tit h2 span.name {
+        padding-left: 0;
+    }
+}
+
+.news {
+    margin: 100px 0 0 0;
+}
+.news .news_wrap {
+    width: calc(100% - var(--wrapper-mar));
+    margin-left: var(--wrapper-mar);
+    border: 1px solid red;
 }
