--- a/nabysol/css/main.css
+++ b/nabysol/css/main.css
@@ -634,7 +634,7 @@
     border-radius: 20px;
     width: 100%;
     height: 100%;
-    transition: .3s;
+    transition: background-color .3s background-image .3s;
     position: relative;
     cursor: none !important; 
 
