--- a/gunsan/css/layout.css
+++ b/gunsan/css/layout.css
@@ -72,31 +72,45 @@ header .header_top ul li a.curr::after {
 }
 header .header_main {
     height: var(--header-var);
-    padding: 0 var(--ctn-mar) 0 3%;
     display: flex;
     align-items: center;
     justify-content: space-between;
     position: relative;
+    border-bottom: 1px solid #ededed;
+    background-color: white;
 }
 
-
-header .header_main .logo {
-    width: clamp(64px, 12vw ,101px);
-    height: clamp(23px, 4vw ,37px);
+header .header_util .wrapper{
+    display: flex;
+    gap: 0 140px;
+    align-items: center;
+    justify-content: space-between;
+}
+header .header_util .logo {
+    min-width: 208px;
+    min-height: 76px;
     background: url(../images/common/logo.svg) no-repeat center center / contain;
 }
 
 @media screen and (min-width:1025px){
     
-
-header .header_top .lang button {
+header .header_top {
+    display: flex;
+    gap: 0 47px;
+}
+header .header_top .top_util {
+    display: flex;
+    align-items: center;
+    gap: 0 47px;
+}
+header .header_top .top_util .lang button {
     display: block;
 }
-header .header_top .lang button span{
+header .header_top .top_util .lang button span{
     padding-right: 20px;
     position: relative;
 }
-header .header_top .lang button span::after {
+header .header_top .top_util .lang button span::after {
     content: "";
     width: 14px;
     height: 14px;
@@ -108,6 +122,134 @@ header .header_top .lang button span::after {
     background-repeat: no-repeat;
     background-size: contain;
     background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 15 15' fill='%23686868' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M7.10418 14.209C6.13016 14.209 5.21098 14.0222 4.34663 13.6488C3.48229 13.2754 2.7285 12.767 2.08526 12.1236C1.4419 11.4803 0.933514 10.7265 0.560108 9.86213C0.186703 8.99776 0 8.07854 0 7.10448C0 6.12269 0.186703 5.20154 0.560108 4.34102C0.933514 3.48051 1.4419 2.72862 2.08526 2.08535C2.7285 1.44196 3.48229 0.933553 4.34663 0.560132C5.21098 0.186711 6.13016 0 7.10418 0C8.08592 0 9.00704 0.186711 9.86751 0.560132C10.728 0.933553 11.4799 1.44196 12.1231 2.08535C12.7665 2.72862 13.2748 3.48051 13.6482 4.34102C14.0217 5.20154 14.2084 6.12269 14.2084 7.10448C14.2084 8.07854 14.0217 8.99776 13.6482 9.86213C13.2748 10.7265 12.7665 11.4803 12.1231 12.1236C11.4799 12.767 10.728 13.2754 9.86751 13.6488C9.00704 14.0222 8.08592 14.209 7.10418 14.209ZM7.10418 13.0713C7.48581 12.5651 7.80699 12.0546 8.06773 11.5397C8.32846 11.0248 8.54084 10.462 8.70486 9.85129H5.50349C5.67711 10.4812 5.89192 11.0536 6.14792 11.5685C6.40379 12.0834 6.72255 12.5843 7.10418 13.0713ZM5.65605 12.8656C5.36939 12.4543 5.11195 11.9867 4.88375 11.4629C4.65554 10.9389 4.47819 10.4017 4.35168 9.85129H1.81493C2.2099 10.6279 2.73959 11.2804 3.40402 11.8088C4.06845 12.337 4.81912 12.6893 5.65605 12.8656ZM8.55231 12.8656C9.38923 12.6893 10.1399 12.337 10.8043 11.8088C11.4688 11.2804 11.9985 10.6279 12.3934 9.85129H9.85667C9.70611 10.4064 9.51673 10.946 9.28852 11.47C9.06044 11.994 8.81504 12.4592 8.55231 12.8656ZM1.34456 8.72953H4.12454C4.07755 8.45158 4.04346 8.17906 4.02227 7.91195C4.00121 7.64498 3.99068 7.37582 3.99068 7.10448C3.99068 6.83313 4.00121 6.56397 4.02227 6.297C4.04346 6.02989 4.07755 5.75737 4.12454 5.47942H1.34456C1.27264 5.73344 1.21756 5.99755 1.17929 6.27176C1.14091 6.54596 1.12171 6.82354 1.12171 7.10448C1.12171 7.38541 1.14091 7.66299 1.17929 7.93719C1.21756 8.2114 1.27264 8.47551 1.34456 8.72953ZM5.24606 8.72953H8.96229C9.00916 8.45158 9.04318 8.18149 9.06437 7.91925C9.08543 7.657 9.09596 7.38541 9.09596 7.10448C9.09596 6.82354 9.08543 6.55195 9.06437 6.2897C9.04318 6.02746 9.00916 5.75737 8.96229 5.47942H5.24606C5.1992 5.75737 5.16517 6.02746 5.14398 6.2897C5.12292 6.55195 5.11239 6.82354 5.11239 7.10448C5.11239 7.38541 5.12292 7.657 5.14398 7.91925C5.16517 8.18149 5.1992 8.45158 5.24606 8.72953ZM10.0838 8.72953H12.8638C12.9357 8.47551 12.9908 8.2114 13.0291 7.93719C13.0674 7.66299 13.0866 7.38541 13.0866 7.10448C13.0866 6.82354 13.0674 6.54596 13.0291 6.27176C12.9908 5.99755 12.9357 5.73344 12.8638 5.47942H10.0838C10.1308 5.75737 10.1649 6.02989 10.1861 6.297C10.2071 6.56397 10.2177 6.83313 10.2177 7.10448C10.2177 7.37582 10.2071 7.64498 10.1861 7.91195C10.1649 8.17906 10.1308 8.45158 10.0838 8.72953ZM9.85667 4.35766H12.3934C11.9937 3.57143 11.4676 2.91894 10.8152 2.40019C10.1627 1.88156 9.40842 1.52684 8.55231 1.33602C8.83897 1.77126 9.09397 2.24732 9.31732 2.7642C9.54078 3.28096 9.72057 3.81211 9.85667 4.35766ZM5.50349 4.35766H8.70486C8.53124 3.73247 8.31288 3.15644 8.04978 2.62959C7.78655 2.10274 7.47135 1.60542 7.10418 1.13765C6.737 1.60542 6.4218 2.10274 6.15857 2.62959C5.89547 3.15644 5.67711 3.73247 5.50349 4.35766ZM1.81493 4.35766H4.35168C4.48778 3.81211 4.66757 3.28096 4.89104 2.7642C5.11438 2.24732 5.36939 1.77126 5.65605 1.33602C4.79507 1.52684 4.0396 1.88281 3.38963 2.40393C2.73953 2.92493 2.21463 3.57617 1.81493 4.35766Z' /%3E%3C/svg%3E%0A");
+}
+
+header .header_top .top_util .font_size {
+    display: flex;
+    gap: 0 11px;
+    align-items: center;
+}
+header .header_top .top_util .font_size button {
+    width: 18px;
+    height: 18px;
+    border-radius: 2px;
+    border: 1px solid #ededed;
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: 10px;
+    background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 10 10' stroke='%23111111' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M4.89062 0.0126953V4.16211H9.04004V4.89062H4.89062V9.04004H4.16211V4.89062H0.0126953V4.16211H4.16211V0.0126953H4.89062Z' fill='%231C1B1F' stroke-width='0.025'/%3E%3C/svg%3E%0A");
+}
+header .header_top .top_util .font_size button.small {
+    background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 10 1' stroke='%23111111' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M9.04004 0.0126953V0.742188H0.0126953V0.0126953H9.04004Z' fill='%231C1B1F' stroke-width='0.025'/%3E%3C/svg%3E%0A");
+}
+
+header .header_util {
+    padding: 53px 0;
+    border-bottom: 1px solid #ededed;
+}
+
+header .header_util .weather {
+    padding-left: 62px;
+    position: relative;
+}
+header .header_util .weather::before {
+    position: absolute;
+    left: 0;
+    top: 50%;
+    transform: translateY(-50%);
+    width: 42px;
+    height: 42px;
+    content: "";
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 40 40' fill='%2311111' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M18.923 6.769V0H20.923V6.769H18.923ZM29.9155 11.346L28.55 9.9805L33.2655 5.077L34.719 6.542L29.9155 11.346ZM33.077 20.923V18.923H39.846V20.923H33.077ZM18.923 39.846V33.1155H20.923V39.846H18.923ZM10.0075 11.2845L5.077 6.5805L6.5805 5.1655L11.3845 9.9305L10.0075 11.2845ZM33.254 34.769L28.55 29.8655L29.904 28.55L34.6805 33.242L33.254 34.769ZM0 20.923V18.923H6.769V20.923H0ZM6.542 34.769L5.1655 33.2655L9.8805 28.55L10.6 29.246L11.3575 29.954L6.542 34.769ZM19.932 29.923C17.1567 29.923 14.7947 28.9517 12.846 27.009C10.8973 25.0663 9.923 22.7073 9.923 19.932C9.923 17.1567 10.8943 14.7947 12.837 12.846C14.7797 10.8973 17.1387 9.923 19.914 9.923C22.6893 9.923 25.0513 10.8943 27 12.837C28.9487 14.7797 29.923 17.1387 29.923 19.914C29.923 22.6893 28.9517 25.0513 27.009 27C25.0663 28.9487 22.7073 29.923 19.932 29.923ZM19.923 27.923C22.123 27.923 24.0063 27.1397 25.573 25.573C27.1397 24.0063 27.923 22.123 27.923 19.923C27.923 17.723 27.1397 15.8397 25.573 14.273C24.0063 12.7063 22.123 11.923 19.923 11.923C17.723 11.923 15.8397 12.7063 14.273 14.273C12.7063 15.8397 11.923 17.723 11.923 19.923C11.923 22.123 12.7063 24.0063 14.273 25.573C15.8397 27.1397 17.723 27.923 19.923 27.923Z' /%3E%3C/svg%3E%0A");
+}
+header .header_util .weather strong{
+    color: var(--main1-c);
+    font-size: 13px;
+}
+header .header_util .weather .w_list {
+    display: flex;
+    align-items: flex-end;
+    gap: 0 12px;
+}
+
+header .header_util .weather .w_list h2 {
+    font-family: var(--nuli);
+    margin: 3px 0 0 0;
+    font-weight: 500;
+    font-size: 22px;
+    color: var(--tit-c);
+}
+header .header_util .weather .w_list dl {
+    display: flex;
+    gap: 0 14px;
+}
+header .header_util .weather .w_list dl dt {
+    position: relative;
+}
+header .header_util .weather .w_list dl dt::before {
+    position: absolute;
+    content: "";
+    width: 1px;
+    height: 10px;
+    background-color: #ededed;
+    right: -6px;
+    top: 50%;
+    transform: translateY(-50%);
+}
+header .header_util .weather .w_list dl dd.wind_stat {
+    color: var(--main1-c);
+}
+header .header_util .search {
+    width: 100%;
+    max-width: 812px;
+}
+header .header_util .search .sch_wrap {
+    border: 3px solid var(--main1-c);
+    border-radius: 50px;
+    height: clamp(53px, 10vw ,67px);
+    padding: 20px 9px 20px 39px;
+    display: flex; /*검색어입력 - 버튼 좌우배치*/
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+    position: relative;
+}
+header .header_util .search .sch_wrap label {
+    display: none;
+}
+header .header_util .search .sch_wrap input[type="text"] {
+    height: 45px;
+    color: var(--tit-c);
+    border: none;
+    outline: none;
+    width: 100%;
+    
+}
+header .header_util .search .sch_wrap .sch_gap {
+    display: flex;
+    gap: 0 20px;
+    align-items: center;
+}
+header .header_util .search .sch_wrap input[type="submit"] {
+    width: 45px;
+    height: 45px;
+    border: none;
+    border-radius: 50%;
+    color: transparent;
+    background-color: var(--main1-c);
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: 19px;
+    background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 19 19' fill='%23fff' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M16.7733 18.3647L10.4315 12.0227C9.9355 12.4069 9.3635 12.7117 8.7155 12.937C8.0675 13.1623 7.37483 13.275 6.6375 13.275C4.78483 13.275 3.21542 12.6319 1.92925 11.3457C0.643083 10.0594 0 8.49 0 6.6375C0 4.785 0.643083 3.21558 1.92925 1.92925C3.21542 0.643083 4.78483 0 6.6375 0C8.49 0 10.0593 0.643083 11.3455 1.92925C12.6318 3.21558 13.275 4.785 13.275 6.6375C13.275 7.37883 13.1623 8.0715 12.937 8.7155C12.7115 9.3595 12.4067 9.9275 12.0227 10.4195L18.3705 16.7733L16.7733 18.3647ZM6.6375 11C7.8515 11 8.88208 10.5764 9.72925 9.72925C10.5764 8.88225 11 7.85167 11 6.6375C11 5.42333 10.5764 4.39275 9.72925 3.54575C8.88208 2.69858 7.8515 2.275 6.6375 2.275C5.42333 2.275 4.39267 2.69858 3.5455 3.54575C2.6985 4.39275 2.275 5.42333 2.275 6.6375C2.275 7.85167 2.6985 8.88225 3.5455 9.72925C4.39267 10.5764 5.42333 11 6.6375 11Z' /%3E%3C/svg%3E%0A");
+    position: relative;
+}
+header .header_util .search .sch_wrap .sch_tag {
+    white-space: nowrap;
+    font-size: 15px;
+    color: var(--main1-c);
 }
 
 header .header_main .gnb{
@@ -122,8 +264,8 @@ header .header_main .gnb_wrap ul.depth1 {
 }
 header .header_main .gnb_wrap ul.depth1 > li > a {
     display: block;
-    padding: 0 clamp(17px, 1.8vw ,27px);
-    font-size: clamp(19px, 1.2vw ,22px);
+    padding: 0 clamp(23px, 2vw ,42px);
+    font-size: clamp(19px, 1.6vw ,23px);
     font-family: var(--nuli);
     color: var(--tit-c);
     font-weight: 500;
@@ -132,7 +274,7 @@ header .header_main .gnb_wrap ul.depth1 > li > a {
 header .header_main .gnb_wrap ul.depth1 > li > .depth2_wrap {
     position: absolute;
     left: 0;
-    top: 99%;
+    top: 100%;
     width: 100%;
     background-color: var(--white);
     overflow: hidden;
@@ -274,12 +416,29 @@ header.open_pc .header_main .gnb_wrap ul.depth1 > li.over > .depth2_wrap {
     header {
         position: fixed;
     }
+
+    header .header_util {
+    margin: 18px 0 0 0;
+    }
+    header .header_util .wrapper {
+    display: block;
+    gap: 0 13%;
+    }
+    header .header_util .search {
+        margin: 14px 0 0 0;
+        max-width: none;
+    }
+    header .header_util .search .sch_wrap {
+        padding: 15px 13px 15px 29px;
+    }
+
+
     header .header_main {
         padding: 15px 0 13px var(--ctn-mar);
         border-bottom: 1px solid #ededed;
         
     }
-    header .header_top .lang {
+    header .header_top .top_util .lang {
         display: none;
     }
     header .header_main .gnb_open {
