--- a/geoje/css/common.css
+++ b/geoje/css/common.css
@@ -122,7 +122,7 @@ body {
 
 #wrap {
     position: relative;
-    /* overflow: hidden ; */
+    overflow: hidden ;
 }
 .blind {
     position: absolute;
